crates/plotnik-lib/tests/02-parser/recovery_unexpected/predicate_on_wildcard_rejected.txt
Q = (_ == "x")
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:8
  |
1 | Q = (_ == "x")
  |        ^^
